# wthr

./: Cargo.toml
src/: cli.rs  coords.rs  main.rs  unit.rs  weather.rs
