[package]
name = "wthr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = {version = "4.5.50", features = ["derive"]}
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
